Add avatars, logos and more dummy content into cards

--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@
     <div class="container">
       <div class="top-nav">
         <div class="search">
-          <img src="" alt="Magnifying glass icon" />
+            <img class="icon" src="https://img.icons8.com/ios/50/000000/search--v1.png"/>
           <div class="search-field"></div>
         </div>
-        <div class="notifications"><img src="" alt="Profile logo" /></div>
-        <div class="profile-photo"><img src="" alt="Profile photo" /></div>
+        <div>
+            <img class="icon" src="https://img.icons8.com/pastel-glyph/64/000000/appointment-reminders.png"/>
+          <img
+            class="profile-photo"
+            src="logos_and_avatars/avatar3.jpg"
+            alt="Profile photo"
+          />
+        </div>
         <div class="profile-name">Kaja Jaronska</div>
       </div>
 
       <div class="bottom-nav">
         <div class="greeting">
-          <div class="greet-profile-photo"></div>
+          <div>
+            <img
+              class="profile-photo-lg"
+              src="logos_and_avatars/avatar3.jpg"
+              alt="Profile photo"
+            />
+          </div>
           <div class="greet-msg">Hello there,</div>
           <div class="profile-name-main">Kaja Jaronska (@KajaJaronska)</div>
         </div>
@@ -32,27 +44,148 @@
         </div>
       </div>
       <div class="menu">
+        <div class="dashboard-header">
+            <img class="icon-lg" src="https://img.icons8.com/carbon-copy/100/ffffff/puzzle.png"/>
+            <div class="title">Dashboard</div>
+        </div>
         <ul class="item-list">
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios-glyphs/30/ffffff/home.png"
+            />Home
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/external-kiranshastry-solid-kiranshastry/64/ffffff/external-id-card-finance-kiranshastry-solid-kiranshastry.png"
+            />Profile
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/material-rounded/24/ffffff/topic.png"
+            />Messages
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios-filled/50/ffffff/clock--v3.png"
+            />History
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios-glyphs/30/ffffff/tasks--v1.png"
+            />Tasks
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/windows/32/ffffff/crowd.png"
+            />Communities
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios-filled/50/ffffff/settings.png"
+            />Settings
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios/50/ffffff/online-support.png"
+            />Support
+          </li>
+          <li>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios-filled/50/ffffff/privacy.png"
+            />Privacy
+          </li>
         </ul>
       </div>
       <div class="hero-section">
         <div class="cards">
           Your Projects
-          <div class="card">Super Cool Project</div>
-          <div class="card">Shop cart app</div>
-          <div class="card">Incredibly hilarious one</div>
-          <div class="card">Ad Blocker</div>
-          <div class="card">Money Maker</div>
-          <div class="card">Impossible App</div>
+          <div class="card">
+            <div class="title">Super Cool Project</div>
+            <div class="content">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+              vel risus bibendum, bibendum tortor sit amet, pharetra velit.
+              Donec eget egestas neque, vitae malesuada massa. Ut ornare
+              ullamcorper mauris cursus sagittis. Vestibulum ut commodo sapien,
+              quis suscipit dolor. Vestibulum cursus.
+            </div>
+            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
+            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
+            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+        </div>
+          <div class="card">
+            <div class="title">Shop Cart App</div>
+            <div class="content">
+              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
+              Etiam tristique lectus orci, vitae dignissim ante varius in.
+              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
+              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
+              luctus.
+              <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
+            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
+            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+            </div>
+          </div>
+          <div class="card">
+            <div class="title">Incredibly hilarious one</div>
+            <div class="content">
+              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
+              Etiam tristique lectus orci, vitae dignissim ante varius in.
+              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
+              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
+              luctus.
+            </div>
+            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
+            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
+            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+          </div>
+          <div class="card">
+            <div class="title">Ad Blocker</div>
+            <div class="content">
+              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
+              Etiam tristique lectus orci, vitae dignissim ante varius in.
+              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
+              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
+              luctus.
+            </div>
+            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
+            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
+            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+          </div>
+          <div class="card">
+            <div class="title">Money Maker</div>
+            <div class="content">
+              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
+              Etiam tristique lectus orci, vitae dignissim ante varius in.
+              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
+              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
+              luctus.
+            </div>
+            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
+            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
+            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+          </div>
+          <div class="card">
+            <div class="title">Impossible App</div>
+            <div class="content">
+              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
+              Etiam tristique lectus orci, vitae dignissim ante varius in.
+              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
+              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
+              luctus.
+            </div>
+            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
+            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
+            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+          </div>
         </div>
         <div class="announcements">
           Announcements
@@ -80,17 +213,41 @@
         </div>
         <div class="trending">
           <div class="trending-card">
-              <div class="user-name">@somethingOdd</div>
-              <div class="project-name">New Cherry Picker</div>
+            <img
+              class="profile-photo"
+              src="logos_and_avatars/avatar5.jpg"
+              alt="Cartoon avatar"
+            />
+            <div class="user-name">@somethingOdd</div>
+            <div class="project-name">New Cherry Picker</div>
           </div>
           <div class="trending-card">
+            <img
+              class="profile-photo"
+              src="logos_and_avatars/avatar1.jpg"
+              alt="Cartoon avatar"
+            />
             <div class="user-name">@katem</div>
             <div class="project-name">Plant Shop App</div>
           </div>
-          <div class="trending-card"><div class="user-name">@robertoro</div>
-          <div class="project-name">Quick Sneak Peak</div></div>
-          <div class="trending-card"><div class="user-name">@PrettyFly</div>
-          <div class="project-name">Marvelous Hop</div></div>
+          <div class="trending-card">
+            <img
+              class="profile-photo"
+              src="logos_and_avatars/avatar2.jpg"
+              alt="Cartoon avatar"
+            />
+            <div class="user-name">@robertoro</div>
+            <div class="project-name">Quick Sneak Peak</div>
+          </div>
+          <div class="trending-card">
+            <img
+              class="profile-photo"
+              src="logos_and_avatars/avatar4.jpg"
+              alt="Cartoon avatar"
+            />
+            <div class="user-name">@PrettyFly</div>
+            <div class="project-name">Marvelous Hop</div>
+          </div>
         </div>
       </div>
     </div>
