--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="menu">
         <div class="dashboard-header">
             <img class="icon-lg" src="https://img.icons8.com/carbon-copy/100/ffffff/puzzle.png"/>
-            <div class="title">Dashboard</div>
+            <div>Dashboard</div>
         </div>
         <ul class="item-list">
           <li>
@@ -85,6 +85,7 @@
               src="https://img.icons8.com/windows/32/ffffff/crowd.png"
             />Communities
           </li>
+          <li></li>
           <li>
             <img
               class="icon"
