Apply styling to the top nav Add grid layout to the top nav, search field and nav-profile-info element Align all elements in the centre Push nav-profile-info element to the end

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <img class="icon" src="https://img.icons8.com/ios/50/000000/search--v1.png"/>
           <div class="search-field"></div>
         </div>
-        <div>
-            <img class="icon" src="https://img.icons8.com/pastel-glyph/64/000000/appointment-reminders.png"/>
+        <div class="nav-profile-info">
+          <img class="icon" src="https://img.icons8.com/pastel-glyph/64/000000/appointment-reminders.png"/>
           <img
             class="profile-photo"
             src="logos_and_avatars/avatar3.jpg"
             alt="Profile photo"
           />
+          <div class="nav-profile-name">Kaja Jaronska</div>
         </div>
-        <div class="profile-name">Kaja Jaronska</div>
       </div>
 
       <div class="bottom-nav">
