Adjust sizes of sidebar, top naviagtion elements and its children

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-profile-info">
           <img class="icon" src="https://img.icons8.com/pastel-glyph/64/000000/appointment-reminders.png"/>
           <img
-            class="profile-photo"
+            class="nav-profile-photo"
             src="logos_and_avatars/avatar3.jpg"
             alt="Profile photo"
           />
