Align bottom navigation element and style main greeting and profile photo elements

--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <div class="container">
       <div class="top-nav">
         <div class="search">
-            <img class="icon" src="https://img.icons8.com/ios/50/000000/search--v1.png"/>
+          <img
+            class="icon"
+            src="https://img.icons8.com/ios/50/000000/search--v1.png"
+          />
           <div class="search-field"></div>
         </div>
         <div class="nav-profile-info">
-          <img class="icon" src="https://img.icons8.com/pastel-glyph/64/000000/appointment-reminders.png"/>
+          <img
+            class="icon"
+            src="https://img.icons8.com/pastel-glyph/64/000000/appointment-reminders.png"
+          />
           <img
             class="nav-profile-photo"
             src="logos_and_avatars/avatar3.jpg"
@@ -34,8 +40,10 @@
               alt="Profile photo"
             />
           </div>
-          <div class="greet-msg">Hello there,</div>
-          <div class="profile-name-main">Kaja Jaronska (@KajaJaronska)</div>
+          <div>
+            <div class="greet-msg">Hello there,</div>
+            <div class="profile-name-main">Kaja Jaronska (@kajajaronska)</div>
+          </div>
         </div>
         <div class="buttons">
           <button>New</button>
@@ -45,8 +53,11 @@
       </div>
       <div class="menu">
         <div class="dashboard-header">
-            <img class="icon-lg" src="https://img.icons8.com/carbon-copy/100/ffffff/puzzle.png"/>
-            <div>Dashboard</div>
+          <img
+            class="icon-lg"
+            src="https://img.icons8.com/carbon-copy/100/ffffff/puzzle.png"
+          />
+          <div>Dashboard</div>
         </div>
         <ul class="item-list">
           <li>
@@ -118,10 +129,19 @@
               ullamcorper mauris cursus sagittis. Vestibulum ut commodo sapien,
               quis suscipit dolor. Vestibulum cursus.
             </div>
-            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
-            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
-            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
-        </div>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios/50/000000/add--v1.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+            />
+          </div>
           <div class="card">
             <div class="title">Shop Cart App</div>
             <div class="content">
@@ -130,9 +150,18 @@
               Praesent varius aliquet odio, id aliquet odio pharetra vitae.
               Pellentesque ac porta purus. Maecenas quis risus a purus maximus
               luctus.
-              <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
-            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
-            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+              <img
+                class="icon"
+                src="https://img.icons8.com/ios/50/000000/add--v1.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+              />
             </div>
           </div>
           <div class="card">
@@ -144,9 +173,18 @@
               Pellentesque ac porta purus. Maecenas quis risus a purus maximus
               luctus.
             </div>
-            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
-            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
-            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios/50/000000/add--v1.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+            />
           </div>
           <div class="card">
             <div class="title">Ad Blocker</div>
@@ -157,9 +195,18 @@
               Pellentesque ac porta purus. Maecenas quis risus a purus maximus
               luctus.
             </div>
-            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
-            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
-            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios/50/000000/add--v1.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+            />
           </div>
           <div class="card">
             <div class="title">Money Maker</div>
@@ -170,9 +217,18 @@
               Pellentesque ac porta purus. Maecenas quis risus a purus maximus
               luctus.
             </div>
-            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
-            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
-            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios/50/000000/add--v1.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+            />
           </div>
           <div class="card">
             <div class="title">Impossible App</div>
@@ -183,9 +239,18 @@
               Pellentesque ac porta purus. Maecenas quis risus a purus maximus
               luctus.
             </div>
-            <img class="icon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/>
-            <img class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"/>
-            <img class="icon" src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"/>
+            <img
+              class="icon"
+              src="https://img.icons8.com/ios/50/000000/add--v1.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+            />
+            <img
+              class="icon"
+              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+            />
           </div>
         </div>
         <div class="announcements">
