Add styling to hero section
Set layout of hero section with grid
Change background color of hero section
Add grid layout to the element with project cards
Add yellow left-side border and box shadow to each card

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
       <div class="hero-section">
         <div class="cards">
-          Your Projects
+          <div class="hero-title">Your Projects</div>
           <div class="card">
             <div class="title">Super Cool Project</div>
             <div class="content">
@@ -253,6 +253,7 @@
             />
           </div>
         </div>
+        <div class="right-side-hero">
         <div class="announcements">
           Announcements
           <div class="announcements-card">
@@ -314,6 +315,7 @@
             <div class="user-name">@PrettyFly</div>
             <div class="project-name">Marvelous Hop</div>
           </div>
+        </div>
         </div>
       </div>
     </div>
