Style hero section
Style hero title
Add grid layout to card elements and style text within
Add grid layout to the card-icons element to position
it at the bottom left corner
Update width and height of cards using clamp function

--- a/index.html
+++ b/index.html
@@ -121,35 +121,60 @@
         <div class="cards">
           <div class="hero-title">Your Projects</div>
           <div class="card">
-            <div class="title">Super Cool Project</div>
-            <div class="content">
+            <div class="card-title">Super Cool Project</div>
+            <div class="card-content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
               vel risus bibendum, bibendum tortor sit amet, pharetra velit.
-              Donec eget egestas neque, vitae malesuada massa. Ut ornare
-              ullamcorper mauris cursus sagittis. Vestibulum ut commodo sapien,
-              quis suscipit dolor. Vestibulum cursus.
+              Donec eget egestas neque, vitae malesuada massa.
             </div>
-            <img
-              class="icon"
-              src="https://img.icons8.com/ios/50/000000/add--v1.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
-            />
+            <div class="card-icons">
+              <img
+                class="icon"
+                src="https://img.icons8.com/ios/50/000000/add--v1.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+              />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">Shop Cart App</div>
+            <div class="card-content">
+              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
+              Etiam tristique lectus orci, vitae dignissim ante varius in.
+              Praesent varius aliquet odio.
+            </div>
+              <div class="card-icons">
+                <img
+                  class="icon"
+                  src="https://img.icons8.com/ios/50/000000/add--v1.png"
+                />
+                <img
+                  class="icon"
+                  src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+                />
+                <img
+                  class="icon"
+                  src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+                />
+              </div>
+            
           </div>
           <div class="card">
-            <div class="title">Shop Cart App</div>
-            <div class="content">
+            <div class="card-title">Incredibly hilarious one</div>
+            <div class="card-content">
               Nullam efficitur justo et libero varius, ut mollis dolor auctor.
               Etiam tristique lectus orci, vitae dignissim ante varius in.
               Praesent varius aliquet odio, id aliquet odio pharetra vitae.
-              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
-              luctus.
+              Pellentesque ac porta purus. 
+            </div>
+            <div class="card-icons">
               <img
                 class="icon"
                 src="https://img.icons8.com/ios/50/000000/add--v1.png"
@@ -165,157 +190,137 @@
             </div>
           </div>
           <div class="card">
-            <div class="title">Incredibly hilarious one</div>
-            <div class="content">
+            <div class="card-title">Ad Blocker</div>
+            <div class="card-content">
               Nullam efficitur justo et libero varius, ut mollis dolor auctor.
               Etiam tristique lectus orci, vitae dignissim ante varius in.
-              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
-              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
-              luctus.
+              Praesent varius aliquet odio.
             </div>
-            <img
-              class="icon"
-              src="https://img.icons8.com/ios/50/000000/add--v1.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
-            />
+            <div class="card-icons">
+              <img
+                class="icon"
+                src="https://img.icons8.com/ios/50/000000/add--v1.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+              />
+            </div>
           </div>
           <div class="card">
-            <div class="title">Ad Blocker</div>
-            <div class="content">
+            <div class="card-title">Money Maker</div>
+            <div class="card-content">
               Nullam efficitur justo et libero varius, ut mollis dolor auctor.
               Etiam tristique lectus orci, vitae dignissim ante varius in.
               Praesent varius aliquet odio, id aliquet odio pharetra vitae.
-              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
-              luctus.
+              Pellentesque ac porta purus. 
             </div>
-            <img
-              class="icon"
-              src="https://img.icons8.com/ios/50/000000/add--v1.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
-            />
+            <div class="card-icons">
+              <img
+                class="icon"
+                src="https://img.icons8.com/ios/50/000000/add--v1.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+              />
+            </div>
           </div>
           <div class="card">
-            <div class="title">Money Maker</div>
-            <div class="content">
+            <div class="card-title">Impossible App</div>
+            <div class="card-content">
               Nullam efficitur justo et libero varius, ut mollis dolor auctor.
               Etiam tristique lectus orci, vitae dignissim ante varius in.
               Praesent varius aliquet odio, id aliquet odio pharetra vitae.
-              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
-              luctus.
+              Pellentesque.
             </div>
-            <img
-              class="icon"
-              src="https://img.icons8.com/ios/50/000000/add--v1.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
-            />
-          </div>
-          <div class="card">
-            <div class="title">Impossible App</div>
-            <div class="content">
-              Nullam efficitur justo et libero varius, ut mollis dolor auctor.
-              Etiam tristique lectus orci, vitae dignissim ante varius in.
-              Praesent varius aliquet odio, id aliquet odio pharetra vitae.
-              Pellentesque ac porta purus. Maecenas quis risus a purus maximus
-              luctus.
+            <div class="card-icons">
+              <img
+                class="icon"
+                src="https://img.icons8.com/ios/50/000000/add--v1.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
+              />
+              <img
+                class="icon"
+                src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
+              />
             </div>
-            <img
-              class="icon"
-              src="https://img.icons8.com/ios/50/000000/add--v1.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-eye-design-thinking-and-3d-model-printing-flatart-icons-outline-flatarticons.png"
-            />
-            <img
-              class="icon"
-              src="https://img.icons8.com/fluency-systems-regular/48/000000/share.png"
-            />
           </div>
         </div>
         <div class="right-side-hero">
-        <div class="announcements">
-          Announcements
-          <div class="announcements-card">
-            <div class="title">Site Maintanance</div>
-            <div class="content">
-              Fusce magna purus, cursus eu dui ac, luctus volutpat libero. Sed
-              lobortis scelerisque dolor, id.
+          <div class="announcements">
+            Announcements
+            <div class="announcements-card">
+              <div class="title">Site Maintanance</div>
+              <div class="content">
+                Fusce magna purus, cursus eu dui ac, luctus volutpat libero. Sed
+                lobortis scelerisque dolor, id.
+              </div>
+            </div>
+            <div class="announcements-card">
+              <div class="title">Community Fair</div>
+              <div class="content">
+                Vestibulum ornare nunc nulla, et viverra libero dapibus ut.
+                Proin pharetra, enim ac mattis rutrum.
+              </div>
+            </div>
+            <div class="announcements-card">
+              <div class="title">Updated Terms & Conditions</div>
+              <div class="content">
+                Donec in neque gravida, porta purus eget, cursus sem. Morbi
+                feugiat dignissim dapibus. Donec eleifend.
+              </div>
             </div>
           </div>
-          <div class="announcements-card">
-            <div class="title">Community Fair</div>
-            <div class="content">
-              Vestibulum ornare nunc nulla, et viverra libero dapibus ut. Proin
-              pharetra, enim ac mattis rutrum.
+          <div class="trending">
+            <div class="trending-card">
+              <img
+                class="profile-photo"
+                src="logos_and_avatars/avatar5.jpg"
+                alt="Cartoon avatar"
+              />
+              <div class="user-name">@somethingOdd</div>
+              <div class="project-name">New Cherry Picker</div>
+            </div>
+            <div class="trending-card">
+              <img
+                class="profile-photo"
+                src="logos_and_avatars/avatar1.jpg"
+                alt="Cartoon avatar"
+              />
+              <div class="user-name">@katem</div>
+              <div class="project-name">Plant Shop App</div>
+            </div>
+            <div class="trending-card">
+              <img
+                class="profile-photo"
+                src="logos_and_avatars/avatar2.jpg"
+                alt="Cartoon avatar"
+              />
+              <div class="user-name">@robertoro</div>
+              <div class="project-name">Quick Sneak Peak</div>
+            </div>
+            <div class="trending-card">
+              <img
+                class="profile-photo"
+                src="logos_and_avatars/avatar4.jpg"
+                alt="Cartoon avatar"
+              />
+              <div class="user-name">@PrettyFly</div>
+              <div class="project-name">Marvelous Hop</div>
             </div>
           </div>
-          <div class="announcements-card">
-            <div class="title">Updated Terms & Conditions</div>
-            <div class="content">
-              Donec in neque gravida, porta purus eget, cursus sem. Morbi
-              feugiat dignissim dapibus. Donec eleifend.
-            </div>
-          </div>
-        </div>
-        <div class="trending">
-          <div class="trending-card">
-            <img
-              class="profile-photo"
-              src="logos_and_avatars/avatar5.jpg"
-              alt="Cartoon avatar"
-            />
-            <div class="user-name">@somethingOdd</div>
-            <div class="project-name">New Cherry Picker</div>
-          </div>
-          <div class="trending-card">
-            <img
-              class="profile-photo"
-              src="logos_and_avatars/avatar1.jpg"
-              alt="Cartoon avatar"
-            />
-            <div class="user-name">@katem</div>
-            <div class="project-name">Plant Shop App</div>
-          </div>
-          <div class="trending-card">
-            <img
-              class="profile-photo"
-              src="logos_and_avatars/avatar2.jpg"
-              alt="Cartoon avatar"
-            />
-            <div class="user-name">@robertoro</div>
-            <div class="project-name">Quick Sneak Peak</div>
-          </div>
-          <div class="trending-card">
-            <img
-              class="profile-photo"
-              src="logos_and_avatars/avatar4.jpg"
-              alt="Cartoon avatar"
-            />
-            <div class="user-name">@PrettyFly</div>
-            <div class="project-name">Marvelous Hop</div>
-          </div>
-        </div>
         </div>
       </div>
     </div>
